# hermes-workspace

./: pyproject.toml
.github/scripts/: feishu_notify.py
.github/workflows/: ci.yml
src/hermes_workspace/: __init__.py  core.py
tests/: test_core.py
